--- a/Seminar9.tex
+++ b/Seminar9.tex
@@ -91,7 +91,7 @@ Which is the role of personas in the accessibility studies?
 \framebox(450,100){}\\
 
 \section {Question 5: Open-end question} Compare the keyboard accessibility for the following websites:
-www.google.com; www.bing.com \\
+\url{www.google.com}; \url{www.bing.com} \\
 
 \noindent Comments:\\
 \framebox(450,100){}\\
