Added Seminar 11 tex

--- a/Seminars/Seminar11.tex
+++ b/Seminars/Seminar11.tex
@@ -96,8 +96,8 @@
 
 \section {Question 5: Open-end question} Which problems could you highlight related to the following sites?\\
 \href{http://m.nbc.com/}{http://m.nbc.com/}\\
-\href{http://m.ikea.com/}{http://m.nbc.com/}\\
-\href{http://m.bestbuy.com/}{http://m.nbc.com/}\\
+\href{http://m.ikea.com/}{http://m.ikea.com/}\\
+\href{http://m.bestbuy.com/}{http://m.bestbuy.com/}\\
 
 
 \noindent Coments:\\
