--- a/project2/document3.tex
+++ b/project2/document3.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 
 %opening
-\title{Assignment 2: Manual tests that could not be automated}
+\title{Assignment 2, Document 3 \\ Manual Tests That Could Not Be Automated}
 \author{Even Langfeldt Friberg \and Husein Mehmedagic}
 
 \begin{document}
