--- a/project2/document3.tex
+++ b/project2/document3.tex
@@ -29,10 +29,10 @@ Even Langfeldt Friberg\footnote{\href{mailto:evenlf@student.matnat.uio.no}{\noli
 
 \maketitle
 
-\section{CreateAccount}
+\section{Test Case: CreateUserAccount.file}
 The value of \texttt{id=wpName2} is \textit{husven\_test3}, but since we already created this user in the manual test, this username is not unique. One could of course 
-change this value to something unique, but the automated test would still fail because the value of \texttt{id=wpCatchaWord} is \textit{aryanbusy} which is probably not 
-the answer to the captcha given.
+change this value to something unique, but the automated test would still fail because the value of \texttt{id=wpCatchaWord} was \textit{aryanbusy} when we first 
+interpreted the captcha, and this is completely unlikely to be the answer to a new captcha given.
 
 One could probably make an automated test that copied the source of the captcha image, made use of an online decaptcha service, copied the captcha word 
 and pasted it into \texttt{id=wpCaptchaWord}, but we did not find such a service available freely.
