--- a/project2/document3.tex
+++ b/project2/document3.tex
@@ -25,11 +25,24 @@ Even Langfeldt Friberg\footnote{\href{mailto:evenlf@student.matnat.uio.no}{\noli
 \and Husein Mehmedagic\footnote{\href{mailto:huseinm@student.matnat.uio.no}{\nolinkurl{huseinm@student.matnat.uio.no}}.}
 }
 
+
+
 \begin{document}
 
 \maketitle
 
+\renewcommand{\abstractname}{Please note.}
+\begin{abstract}
+The automation was done with the Selenium IDE plugin for Firefox under OS X. Please see the last chapter of this document for more details.
+\end{abstract}
+
 \section*{Test Case: 1 a Create Account}
+
+The value of \texttt{id=wpName2} is \textit{husven}, but another user had already created this user before us, so even the manual test failed. There is no 
+indication given if a chosen username is taken while registering, you have to click the \texttt{Create this account} button to be aware of that. Additionally, 
+what is said in the next case (1 b) also applies here, making it difficult/impossible to automate.
+
+\section*{Test Case: 1 b Create Account}
 The value of \texttt{id=wpName2} is \textit{husven\_test3}, but since we already created this user when we performed the manual test, this username is 
 no longer unique. One could of course 
 change this value to something unique, but the automated test would still fail because the value of \texttt{id=wpCatchaWord} was \textit{aryanbusy} when we first 
@@ -208,22 +221,46 @@ make use of the \texttt{sendKeys} and the \texttt{keyDown} commands, but neither
 (...)
 \end{verbatim}
 
+\section*{Please note}
 
+We finally managed to run all automated tests in Selenium IDE on Firefox under OS X (see attached screenshot). However, the Wikipedia page seems to detect what OS
+the user is running as some labels differ in different environments. This is an issue when loading the developed test suite in for instance Firefox under Ubuntu. Specifically one would need 
+to find and replace all occurrences of 
 
+\begin{verbatim}
+	<td>clickAndWait</td>
+	<td>css=a[title=&quot;The list of pages (...) [\ctlkey \optkey L]&quot;]</td>
+	<td></td>
+\end{verbatim}
 
+with
 
+\begin{verbatim}
+	<td>clickAndWait</td>
+	<td>link=Watchlist</td>
+	<td></td>
+\end{verbatim}
 
+and, likewise replace
 
+\begin{verbatim}
+	<td>clickAndWait</td>
+	<td>css=a[title=&quot;A list of rec(...) [\ctlkey \optkey r]&quot;]</td>
+	<td></td>
+\end{verbatim}
 
+with
 
+\begin{verbatim}
+	<td>clickAndWait</td>
+	<td>link=Recent changes</td>
+	<td></td>
+\end{verbatim}
 
-
-
-
-
-
-
-
+These changes currently would need to be done in (\texttt{file:linenumber}) \texttt{Gadgets.html:143-145}, \texttt{Gadgets.html:179-181}, 
+\texttt{Recent\_Changes.html:55-57}, \texttt{Recent\_Changes.html:100-102}, \texttt{Recent\_Changes.html:140-142}, \texttt{Recent\_Changes.html:175-177}, 
+\texttt{Watchlist.html:20-22} and \texttt{Watchlist.html:110-112}.
+\footnote{bash command \texttt{find . -name '*.html' | xargs grep -i -n 'css.*changes'}}
 
 
 
